--- a/package.json
+++ b/package.json
@@ -44,17 +44,40 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
+    "@types/glob": "^7.1.4",
+    "@types/glob-parent": "^5.1.1",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.175",
+    "@types/mock-fs": "^4.13.1",
     "@types/node": "^16.7.8",
+    "@types/url-join": "^4.0.1",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "codecov": "^3.8.3",
+    "dependency-graph": "^0.11.0",
     "eslint": "^7.32.0",
     "husky": "^7.0.2",
     "jest": "^27.1.0",
+    "laravel-mix": "^6.0.31",
+    "mock-fs": "^5.0.0",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.4.7",
+    "string-argv": "^0.3.1",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.2"
+    "typescript": "4.2"
+  },
+  "dependencies": {
+    "ajv": "^8.6.2",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.2",
+    "glob": "^7.1.7",
+    "glob-parent": "^6.0.1",
+    "lodash": "^4.17.21",
+    "tslib": "^2.3.1",
+    "url-join": "^4.0.1"
+  },
+  "peerDependencies": {
+    "laravel-mix": "6.x.x"
   }
 }
