--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "../dist"
+    "outDir": "../dist",
+    "declaration": true,
+    "sourceMap": true,
+    "skipLibCheck": true,
   }
 }
