--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,13 @@
 {
   "compilerOptions": {
+    "target": "ES5",
     "downlevelIteration": true,
-    "declaration": true,
-    "declarationDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
-    "sourceMap": true,
     "noImplicitReturns": true,
-    "noImplicitOverride": true,
+    // "noImplicitOverride": true,
     "importHelpers": true
   }
 }
