--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:fix": "eslint . --ignore-path .gitignore --ext .ts,.js --fix",
     "build": "rimraf dist && tsc -p src",
     "clean": "rimraf dist tests/coverage",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -40,42 +40,40 @@
   },
   "homepage": "https://github.com/recursive-beast/laravel-mix-manifest-paths#readme",
   "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@semantic-release/changelog": "^6.0.1",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
-    "@types/glob": "^7.2.0",
-    "@types/glob-parent": "^5.1.1",
-    "@types/jest": "^27.4.0",
-    "@types/lodash": "^4.14.178",
-    "@types/mock-fs": "^4.13.1",
-    "@types/node": "^17.0.18",
-    "@types/url-join": "^4.0.1",
-    "@types/webpack": "^5.28.0",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@types/glob-parent": "^5.1.3",
+    "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.14.202",
+    "@types/mock-fs": "^4.13.4",
+    "@types/node": "^20.11.16",
+    "@types/webpack": "^5.28.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "codecov": "^3.8.3",
-    "eslint": "^8.9.0",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "laravel-mix": "^6.0.43",
-    "mock-fs": "^5.1.2",
-    "rimraf": "^3.0.2",
-    "semantic-release": "^19.0.2",
-    "string-argv": "^0.3.1",
-    "ts-jest": "^27.1.3",
-    "typescript": "4.5"
+    "eslint": "^8.56.0",
+    "husky": "^9.0.10",
+    "jest": "^29.7.0",
+    "laravel-mix": "^6.0.49",
+    "mock-fs": "^5.2.0",
+    "rimraf": "^5.0.5",
+    "semantic-release": "^23.0.2",
+    "string-argv": "^0.3.2",
+    "ts-jest": "^29.1.2",
+    "typescript": "5.3"
   },
   "dependencies": {
-    "ajv": "^8.10.0",
-    "chalk": "^4.1.2",
-    "chokidar": "^3.5.3",
-    "dependency-graph": "^0.11.0",
-    "glob": "^7.2.0",
+    "ajv": "^8.12.0",
+    "chalk": "^5.3.0",
+    "chokidar": "^3.6.0",
+    "dependency-graph": "^1.0.0",
+    "glob": "^10.3.10",
     "glob-parent": "^6.0.2",
     "lodash": "^4.17.21",
-    "tslib": "^2.3.1",
-    "url-join": "^4.0.1"
+    "tslib": "^2.6.2",
+    "url-join": "^5.0.0"
   },
   "peerDependencies": {
     "laravel-mix": "6.x.x"
