--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES5",
     "downlevelIteration": true,
     "strict": true,
+    "allowJs": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "moduleResolution": "node",
