--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@types/glob-parent": "^5.1.3",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.202",
-    "@types/mock-fs": "^4.13.4",
     "@types/node": "^20.11.16",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -57,7 +56,7 @@
     "husky": "^9.0.10",
     "jest": "^29.7.0",
     "laravel-mix": "^6.0.49",
-    "mock-fs": "^5.2.0",
+    "memfs": "^4.6.0",
     "rimraf": "^5.0.5",
     "semantic-release": "^23.0.2",
     "string-argv": "^0.3.2",
