--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,13 +32,16 @@ jobs:
           node-version: lts/*
       - run: npm install
       - run: npm run test:coverage
-      - run: npx codecov
+      - uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          directory: tests/coverage
   release:
     name: release
     runs-on: ubuntu-latest
     needs: [lint, test]
     env:
-      GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
     steps:
       - uses: actions/checkout@v2
