--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.16",
+    "@types/url-join": "^4.0.3",
     "@types/webpack": "^5.28.5",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
@@ -66,14 +67,14 @@
   },
   "dependencies": {
     "ajv": "^8.12.0",
-    "chalk": "^5.3.0",
+    "chalk": "^4.1.2",
     "chokidar": "^3.6.0",
     "dependency-graph": "^1.0.0",
     "glob": "^10.3.10",
     "glob-parent": "^6.0.2",
     "lodash": "^4.17.21",
     "tslib": "^2.6.2",
-    "url-join": "^5.0.0"
+    "url-join": "^4.0.1"
   },
   "peerDependencies": {
     "laravel-mix": "6.x.x"
